re PR tree-optimization/26359 (Over optimization of loop when using -ftree-vectorize)

PR tree-optimization/26359
        * tree-ssa-alias.c (new_type_alias): Set fields for new tag.

From-SVN: r111451